# Antigravity-Manager

./: README.md  README_EN.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  perplexity.rs  proxy.rs
src-tauri/src/models/: config.rs  mod.rs  perplexity.rs
src-tauri/src/modules/: mod.rs  perplexity_auth.rs  quota.rs
src-tauri/src/proxy/: config.rs  mod.rs  project_resolver.rs  server.rs
src-tauri/src/proxy/handlers/: claude.rs  gemini.rs  mod.rs  openai.rs  perplexity.rs
src-tauri/src/proxy/mappers/: mod.rs
src-tauri/src/proxy/mappers/openai/: streaming.rs
src-tauri/src/proxy/mappers/perplexity/: mod.rs  request.rs  response.rs
src-tauri/src/proxy/upstream/: client.rs
src/locales/: en.json  zh.json
src/pages/: ApiProxy.tsx  Perplexity.tsx
src/types/: config.ts
